Production settings changes

--- a/web/appsettings.Development.json
+++ b/web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BelezkaContext": "Server=localhost;Database=KriptoBelezka;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=true"
+    "BelezkaContext": "Server=kriptobelezka-db.database.windows.net;Database=KriptoBelezka;User Id=kriptobelezka-sa;Password=yourStrong(!)Password;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
