A watchlist can only be edited if you're the owner, basic API & authorized API calls

--- a/web/appsettings.Development.json
+++ b/web/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "BelezkaContext": "Server=localhost;Database=KriptoBelezka;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=true"
   },
+  "ApiKey": "SecretKey",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
